PDMS/K8s/pdms-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pdms-deployment
  labels:
    app: pdms
spec:
  replicas: 1   # This is 1 for SQLite
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: pdms
  template:
    metadata:
      labels:
        app: pdms
    spec:
      containers:
        - name: pdms
          image: agilewildcats/pdms:latest
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
          volumeMounts:
            - name: sqlite-storage
              mountPath: /app/db.sqlite3
              subPath: db.sqlite3
          livenessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
      restartPolicy: Always
      volumes:
        - name: sqlite-storage
          persistentVolumeClaim:
            claimName: pdms-sqlite-pvc
