PDMS/K8s/pdms-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pdms-service
  labels:
    app: pdms
spec:
  selector:
    app: pdms
  ports:
    - protocol: TCP
      port: 80        # External port exposed by the service
      targetPort: 8000 # Django container port
  type: ClusterIP     # Use ClusterIP for internal routing; Ingress will expose externally
  sessionAffinity: None
