PDMS/K8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pdms-service
spec:
  selector:
    app: pdms
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer
