PDMS/K8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pdms-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: pdms.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pdms-service
                port:
                  number: 80
