PDMS/K8s/pdms-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pdms-ingress
  labels:
    app: pdms
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"   # Force HTTPS
    nginx.ingress.kubernetes.io/proxy-body-size: "10m" # Allow larger uploads if needed
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600" # Long-running requests
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  ingressClassName: nginx
  rules:
    - host: pdms.local   # Can be replace with our  registered domain or external hostname if we have it howver, we keep it like this for now
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pdms-service
                port:
                  number: 80
  tls:
    - hosts:
        - pdms.local
      secretName: pdms-tls
